# mangaalert

./: .gitignore  Dockerfile  README.md  docker-compose.example.yml  eslint.config.mjs  package.json  pyproject.toml
mangaalert/manga/: main.py
mangaalert/telegram/: main.py
src/: bot.ts  index.ts
src/helpers/: file.ts
src/manga/: file.ts  scan.ts
