[tool.poetry]
name = "mangaalert"
version = "0.1.0"
description = ""
authors = ["alexay7 <43906716+alexay7@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
schedule = "^1.2.2"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
python-telegram-bot = "^21.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
bot = "mangaalert.telegram.main:main"